# ClaudeKB

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  index.md
docs/concepts/: leaky.md
docs/guide/: create-a-kb.md  install.md  public-and-private-kbs.md  roadmap.md  upgrading.md  using-a-kb.md  what-is-claudekb.md
docs/research/: 01-zensical-and-the-mkdocs-collapse.md  02-open-knowledge-format.md  03-llm-wiki-pattern.md  04-copier-scaffolding.md  05-antora.md  06-quartz.md  07-gitlab-handbook.md  08-backstage-techdocs.md  09-basic-memory.md  10-loop2-experiments.md  11-launch-retrospective.md  README.md  SYNTHESIS.md
playbooks/: scaffold-kb.md
scripts/: release.py
src/kbtool/: __init__.py  build.py  cli.py  kb.py  links.py  nav.py  preprocess.py  secrets.py  validators.py  vcs.py  verify.py
src/kbtool/data/: frontmatter.schema.json  pymarkdown.json  site-base.yml
src/kbtool/data/playbooks/: access-dns-setup.md  ingest.md  lint.md  upgrade.md
template/: .gitattributes  .gitignore  CLAUDE-KB.md.jinja  CLAUDE.md  blueprint-checksums.json  kb.yml.jinja  nav.yml  pyproject.toml.jinja  vocab.yml.jinja  wrangler.jsonc.jinja  {{ _copier_conf.answers_file }}.jinja
template/docs/: index.md.jinja  log.md
template/docs/public/: index.md
tests/: run_e2e.sh  run_upgrade.sh  test_kbtool.py
