# MANAGED BY BLUEPRINT — this is the blueprint's OWN kbtool source package.
# The wheel built from here is what each KB vendors (D15). Not a KB file.
[project]
name = "kbtool"
dynamic = ["version"]   # single source of truth: src/kbtool/__init__.py
description = "ClaudeKB build/validate toolchain — source of truth lives only here (D15)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.21",
    "pymarkdownlnt>=0.9.29",
]

[project.scripts]
kbtool = "kbtool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/kbtool/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/kbtool"]
# Data files (.json/.yml/.md) inside the package are non-Python; tell hatchling
# to ship them in the wheel alongside the modules.
artifacts = [
    "src/kbtool/data/*.json",
    "src/kbtool/data/*.yml",
    "src/kbtool/data/playbooks/*.md",
]

[dependency-groups]
dev = [
    "zensical==0.0.50",
    "copier==9.16.0",
]
